[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/images/weeb/pixelUI/arrows-pixels-special.png" type="Texture" id=1]
[ext_resource path="res://scene/BulletAttack1.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 1 )
region = Rect2( 0, 17, 17, 17 )

[node name="BulletAttack1" type="Node2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 2 )

[node name="Down1" type="Sprite" parent="."]
position = Vector2( 416, 216 )
rotation = 4.71239
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Down2" type="Sprite" parent="."]
position = Vector2( 516, 216 )
rotation = 4.71239
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Down3" type="Sprite" parent="."]
position = Vector2( 608, 216 )
rotation = 4.71239
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Up1" type="Sprite" parent="."]
position = Vector2( 412, 551 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Up2" type="Sprite" parent="."]
position = Vector2( 512, 551 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Up3" type="Sprite" parent="."]
position = Vector2( 604, 551 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Left1" type="Sprite" parent="."]
position = Vector2( 676, 288 )
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Left2" type="Sprite" parent="."]
position = Vector2( 676, 384 )
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Left3" type="Sprite" parent="."]
position = Vector2( 676, 480 )
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Right1" type="Sprite" parent="."]
position = Vector2( 348, 288 )
rotation = 3.14159
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Right2" type="Sprite" parent="."]
position = Vector2( 348, 384 )
rotation = 3.14159
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Right3" type="Sprite" parent="."]
position = Vector2( 348, 480 )
rotation = 3.14159
scale = Vector2( 3, 3 )
texture = SubResource( 143 )

[node name="Tween1" type="Tween" parent="."]

[node name="Tween2" type="Tween" parent="."]

[node name="Tween3" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween1" to="." method="_on_Tween1_tween_all_completed"]
[connection signal="tween_all_completed" from="Tween2" to="." method="_on_Tween2_tween_all_completed"]
